fixed alignment for all elements in header.

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,10 @@ Purple: #8783D1 (tertiary)
 White: #ECEBF3
 Black: #101119 */
 
-
 header {
     background-color: #1FAD9D;
     color: #101119;
     border-radius: 10px;
-    border-color: #1FAD9D;
 }
 
 body {
@@ -24,7 +22,7 @@ button {
     font-style: bold;
     font-size: 16px;
     border: none;
-    border-radius: 20px;
+    border-radius: 10px;
     border-color: #DD4055;
     height: 40px;
     margin: 20px;
@@ -37,23 +35,23 @@ footer {
     color: #101119;
 }
 
+#logo-div {
+    display:inline-block;
+}
+
 #logo {
-    display: inline-block;
-    width: 5%;
+    width: 20px;
     height: auto;
-    position: absolute;
-    left: 20px;
-    top: 15px;
+}
+
+#login-div {
+    display: inline-block;
 }
 
 #login {
-    display: inline-block;
-    width: 10%;
-    height: 8%;
+    width: 120px;
+    height: 50px;    
     background-color: #8783D1;
-    position: absolute;
-    right: 20px;
-    top: 15px;
     border: solid;
     border-radius: 10px;
     border-color: #101119;
@@ -64,17 +62,17 @@ footer {
 #header-nav {
     display: inline-block;
     list-style-type: none;
-    margin: 0px;
-    padding: 0px;
+    margin-right: 30px;
+    padding: 0;
     font-weight: 400;
 }
 
 .nav-items {
-    border-left: none;
     text-decoration: none;
     text-align: center;
     color: #101119;
     padding: 20px 20px;
+    border-radius: 10px;
 }
 
 #adopt {
@@ -145,6 +143,13 @@ h3 {
     background-color: #1FAD9D;
     border-radius: 10px;
     margin: auto;
+}
+
+#logo-blank {
+    display: inline-block;
+    width: 100px;
+    height:auto;
+    margin: 0px 220px 0px 80px;
 }
 
 
